syntax = "proto3";
package proto;

option go_package = ".;internal_topics_pb";

message ACLMessageKey {

  enum Operation {
    reserved 1;
    OPERATION_RESERVED = 0;
    OPERATION_ALL = 2;
    OPERATION_READ = 3;
    OPERATION_WRITE = 4;
    OPERATION_CREATE = 5;
    OPERATION_DELETE = 6;
    OPERATION_ALTER = 7;
    OPERATION_DESCRIBE = 8;
    OPERATION_CLUSTER_ACTION = 9;
    OPERATION_DESCRIBE_CONFIGS = 10;
    OPERATION_ALTER_CONFIGS = 11;
    OPERATION_IDEMPOTENT_WRITE = 12;
  }

  enum ResourceType {
    reserved 1;
    RESOURCE_TYPE_RESERVED = 0;
    RESOURCE_TYPE_TOPIC = 2;
    RESOURCE_TYPE_GROUP = 3;
    RESOURCE_TYPE_CLUSTER = 4;
    RESOURCE_TYPE_TRANSACTIONAL_ID = 5;
    RESOURCE_TYPE_DELEGATION_TOKEN = 6;
  }

  enum PatternType {
    reserved 1;
    PATTERN_TYPE_RESERVED = 0;
    PATTERN_TYPE_MATCH = 2;
    PATTERN_TYPE_LITERAL = 3;
    PATTERN_TYPE_PREFIXED = 4;
  }

  Operation operation = 1;
  ResourceType resource_type = 2;
  PatternType pattern_type = 3;
  string resource_name = 4;
  string principal = 5;
}

message ACLMessageValue {

  enum Permission {
    reserved 1;
    PERMISSION_RESERVED = 0;
    PERMISSION_DENY = 2;
    PERMISSION_ALLOW = 3;
  }

  Permission permission = 1;
}
